[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = "1.30.0"
rust_xlsxwriter = "0.54.0"

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

csv = "1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = { version = "2.2.2", features = ["serde"] }
lettre = { version = "0.11.7", features = ["default", "serde", "tokio1", "tokio1-native-tls"] }
