[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0"
tokio = { version = "1.46", features = ["full"] }

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
rust_decimal = "1.30.0"

csv = "1.3"
rust_xlsxwriter = "0.54.0"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = { version = "2.2.2", features = ["serde"] }
sanitize-filename-reader-friendly = "2.3.0"
lettre = { version = "0.11.7", features = ["default", "serde", "tokio1", "tokio1-native-tls"] }
